--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,22 +1,3 @@
 <div class="container">
-  <table class="table table-bordered">
-    <thead>
-      <tr>
-        <th scope="col">Marca</th>
-        <th scope="col">Modelo</th>
-        <th scope="col">Cor</th>
-        <th scope="col">Ano</th>
-        <th scope="col">Tipo de transmissão</th>
-      </tr>
-    </thead>
-    <tbody *ngFor="let car of cars">
-      <tr>
-        <td>{{car.brand}}</td>
-        <td>{{car.model}}</td>
-        <td>{{car.color}}</td>
-        <td>{{car.ano}}</td>
-        <td>{{car.transmission}}</td>
-      </tr>
-    </tbody>
-  </table>
+  <router-outlet></router-outlet>
 </div>
