--- a/front/src/app/car-list/car-list.component.html
+++ b/front/src/app/car-list/car-list.component.html
@@ -1,24 +1,35 @@
 <div class="col-6">
   <h3>Carros</h3>
   <p>Aqui está uma lista dos carros disponíveis</p>
-</div>
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th scope="col">Marca</th>
-      <th scope="col">Modelo</th>
-      <th scope="col">Cor</th>
-      <th scope="col">Ano</th>
-      <th scope="col">Tipo de transmissão</th>
-    </tr>
-  </thead>
-  <tbody *ngFor="let car of cars">
-    <tr>
-      <td>{{car.brand}}</td>
-      <td>{{car.model}}</td>
-      <td>{{car.color}}</td>
-      <td>{{car.ano}}</td>
-      <td>{{car.transmission}}</td>
-    </tr>
-  </tbody>
-</table>
+</div> 
+<ng-content *ngIf="cars; else noContent"> 
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th scope="col">Marca</th>
+        <th scope="col">Modelo</th>
+        <th scope="col">Cor</th>
+        <th scope="col">Ano</th>
+        <th scope="col">Tipo de transmissão</th>
+        <th scope="col">Info</th>
+      </tr>
+    </thead>
+    <tbody *ngFor="let car of cars">
+      <tr>
+        <td>{{car.brand}}</td>
+        <td>{{car.model}}</td>
+        <td>{{car.color}}</td>
+        <td>{{car.ano}}</td>
+        <td>{{car.transmission}}</td>
+        <td>
+          <a href="/cars/{{car.id}}"><i class="bi bi-search"></i></a>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</ng-content>
+<ng-template #noContent>
+  <p>Nenhum veículo disponível!</p>
+  <p>Tente mais tarde</p>
+</ng-template>
+ 
