--- a/front/src/app/car-list/car-list.component.html
+++ b/front/src/app/car-list/car-list.component.html
@@ -19,7 +19,7 @@
         <td>{{car.brand}}</td>
         <td>{{car.model}}</td>
         <td>{{car.color}}</td>
-        <td>{{car.ano}}</td>
+        <td>{{car.carYear}}</td>
         <td>{{car.transmission}}</td>
         <td>
           <a href="/cars/{{car.id}}"><i class="bi bi-search"></i></a>
