--- a/front/src/app/modules/car-register/car-register.component.html
+++ b/front/src/app/modules/car-register/car-register.component.html
@@ -1,4 +1,3 @@
-<h3>Área de cadastro</h3>
 <p>Insira os dados do carro:</p>
 
 <div class="col-6">
@@ -31,17 +30,17 @@
       <div class="input-group-prepend">
         <div class="input-group-text">R$</div>
       </div>
-      <input class="form-control" type="number" id="price" name="price" formControlName="price" />
+      <input class="form-control" type="text" id="price" name="price" formControlName="price" />
     </div>
-    <ng-container *ngIf="submitted" [ngTemplateOutlet]="submitStatus"></ng-container>
+    <ng-container *ngIf="submitted" #submitContainer></ng-container>
     <div class="form-group">
       <button [class]="btnType" type="submit" [disabled]="carForm.invalid">Cadastrar</button>
     </div>
   </form>
 </div>
 <ng-template #success>
-  <small style="color: green">Carro cadastrado com sucesso!</small>
+  <small style="color: green">Dados atualizados com sucesso!</small>
 </ng-template>
 <ng-template #fail>
-  <small style="color: red">Não foi possível cadastrar. Tente novamente</small>
+  <small style="color: red">Não foi possível atualizar os dados. Tente novamente</small>
 <ng-template>
