prepara componente de formulario p reuso

--- a/front/src/app/modules/car-list/car-list.component.html
+++ b/front/src/app/modules/car-list/car-list.component.html
@@ -56,6 +56,7 @@
 </ng-template>
 <ng-template #carUpdate>
   <div class="col-4">
+    <app-car-update></app-car-update>
   </div>
 </ng-template>
 
