--- a/front/src/app/modules/car-register/car-register.component.html
+++ b/front/src/app/modules/car-register/car-register.component.html
@@ -17,13 +17,13 @@
     <div class="form-group mt-2">
       <label>Tipo de transmissão</label>
       <select class="form-control" id="transmission" name="transmission" formControlName="transmission">
-        <option value="Automático">automatico</option>
-        <option value="Manual">manual</option>
+        <option value="AUTOMATICO">Automático</option>
+        <option value="MANUAL">Manual</option>
       </select>
     </div>
     <div class="form-group mt-2">
       <label>Ano de fabricação</label>
-      <input class="form-control" type="text" id="carYear" name="carYear" formControlName="carYear" />
+      <input class="form-control" type="text" id="year" name="year" formControlName="year" />
     </div>
     <label>Preço do automóvel</label>
     <div class="input-group">
